添加  加减模块未完成

--- a/src/components/goods/goods.less
+++ b/src/components/goods/goods.less
@@ -53,6 +53,7 @@
             background: #f3f5f7;
         }
         .group-item {
+            
             display: flex;
             padding: 18px;
             .group-icon {
@@ -60,6 +61,7 @@
                 margin-right: 10px;
             }
             .group-content {
+                position: relative;
                 flex: 1;
                 .title {
                     font-size: 14px;
@@ -93,6 +95,11 @@
                         color: #93999f;
                         text-decoration: line-through;
                     }
+                }
+                .cartControl-wrapper{
+                    position: absolute;
+                    right: 0px;
+                    bottom: 0px;
                 }
             }
         }
