--- a/src/components/goods/goods.less
+++ b/src/components/goods/goods.less
@@ -129,3 +129,9 @@
         background-image: url(img/special_3@2x.png);
     }
 }
+.lwz-content .card{
+    position: absolute;
+    bottom: 0px;
+    height: 48px;
+    width: 100%;
+}
