--- a/src/components/ratings/ratings.less
+++ b/src/components/ratings/ratings.less
@@ -1,3 +1,83 @@
-.ratings{
-   
+.ratings {
+    .overview {
+        display: flex;
+        padding: 18px;
+        .left {
+            flex: 0 0 137px;
+            @media screen and (max-width: 320px) {
+                flex: 0 0 110px !important;
+            }
+            padding: 6px 0;
+            text-align: center;
+            border-right: 1px solid rgba(7, 17, 27, 0.1);
+            .score {
+                margin-bottom: 12px;
+                line-height: 28px;
+                font-size: 24px;
+                color: #f90;
+            }
+            .title {
+                margin-bottom: 8px;
+                line-height: 12px;
+                font-size: 12px;
+                color: #07111b;
+            }
+            .rankRate {
+                line-height: 10px;
+                font-size: 12px;
+                color: #93999f;
+            }
+        }
+        .right {
+            flex: 1;
+            padding: 6px 0 6px 24px;
+            @media screen and (max-width: 320px) {
+                padding-left:6px !important;
+            }
+            .score-wrapper {
+                line-height: 18px;
+                margin-top: 8px;
+                font-size: 0;
+                .text {
+                    display: inline-block;
+                    font-size: 12px;
+                    color: #07111b;
+                    vertical-align: top;
+                }
+                .score {
+                    color: #f90;
+                }
+            }
+            .delivery-wrapper {
+                font-size: 0px;
+                span {
+                    font-size: 12px;
+                    color: #07111b;
+                }
+                .deliveryTime {
+                    padding-left: 6px;
+                    color: #93999f;
+                }
+            }
+            .min-size {
+                width: 15px;
+                height: 15px;
+                margin-right: 3px;
+                background-size: 15px 15px;
+            }
+            .grade {
+                margin: 0 6px;
+                display: inline-block;
+            }
+        }
+    }
+    .split {
+        width: 100%;
+        height: 16px;
+        border-top: 1px solid rgba(1, 17, 27, 0.1);
+        background: #f3f5f7;
+    }
+    .centre{
+        padding: 0 18px;
+    }
 }
