--- a/src/components/ratingselect/ratingselect.less
+++ b/src/components/ratingselect/ratingselect.less
@@ -24,4 +24,23 @@
         color: #fff;
         background: #4d555d;
     }
+    .switch {
+        padding: 12px 0px;
+        line-height: 24px;
+        color: #93999f;
+        border-top: 1px solid rgba(1, 17, 27, 0.1);
+        font-size: 0;
+        .iconfont {
+            display: inline-block;
+            vertical-align: top;
+            font-size: 24px;
+            margin-right: 4px;
+        }
+        &.on .iconfont {
+            color: #00c850;
+        }
+        .text {
+            font-size: 12px;
+        }
+    }
 }
