--- a/src/components/food/food.less
+++ b/src/components/food/food.less
@@ -1,83 +1,108 @@
-.ratings {
-    .overview {
-        display: flex;
-        padding: 18px;
-        .left {
-            flex: 0 0 137px;
-            @media screen and (max-width: 320px) {
-                flex: 0 0 110px !important;
+.food {
+    position: fixed;
+    width: 100%;
+    left: 0px;
+    top: 0px;
+    bottom: 48px;
+    overflow: hidden;
+    background: white;
+    .content {
+        .header {
+            position: relative;
+            width: 100%;
+            >img {
+                width: 100%;
+                height: 100%;
             }
-            padding: 6px 0;
-            text-align: center;
-            border-right: 1px solid rgba(7, 17, 27, 0.1);
-            .score {
-                margin-bottom: 12px;
-                line-height: 28px;
-                font-size: 24px;
-                color: #f90;
-            }
-            .title {
-                margin-bottom: 8px;
-                line-height: 12px;
-                font-size: 12px;
-                color: #07111b;
-            }
-            .rankRate {
-                line-height: 10px;
-                font-size: 12px;
-                color: #93999f;
+            .back {
+                position: absolute;
+                top: 10px;
+                left: 0;
+                >i {
+                    padding: 10px;
+                    font-size: 20px;
+                    color: #fff;
+                }
             }
         }
-        .right {
-            flex: 1;
-            padding: 6px 0 6px 24px;
-            @media screen and (max-width: 320px) {
-                padding-left:6px !important;
+        .referral {
+            padding: 18px;
+            position: relative;
+            .title {
+                line-height: 14px;
+                margin-bottom: 8px;
+                font-size: 14px;
+                font-weight: 700;
+                color: #07111b;
             }
-            .score-wrapper {
-                line-height: 18px;
-                margin-top: 8px;
+            .detail {
+                margin-top: 18px;
+                line-height: 10px;
                 font-size: 0;
-                .text {
+                height: 10px;
+                >span {
+                    font-size: 10px;
                     display: inline-block;
-                    font-size: 12px;
-                    color: #07111b;
-                    vertical-align: top;
-                }
-                .score {
-                    color: #f90;
-                }
-            }
-            .delivery-wrapper {
-                font-size: 0px;
-                span {
-                    font-size: 12px;
-                    color: #07111b;
-                }
-                .deliveryTime {
-                    padding-left: 6px;
                     color: #93999f;
                 }
+                >span:nth-of-type(1) {
+                    margin-right: 12px;
+                }
             }
-            .min-size {
-                width: 15px;
-                height: 15px;
-                margin-right: 3px;
-                background-size: 15px 15px;
+            .price {
+                line-height: 24px;
+                .now {
+                    margin-right: 8px;
+                    font-size: 14px;
+                    color: #f01414;
+                }
+                .old {
+                    font-size: 10px;
+                    color: #93999f;
+                    text-decoration: line-through;
+                }
             }
-            .grade {
-                margin: 0 6px;
-                display: inline-block;
+            .buy {
+                position: absolute;
+                right: 18px;
+                bottom: 18px;
+                z-index: 10;
+                height: 24px;
+                line-height: 24px;
+                padding: 0 12px;
+                box-sizing: border-box;
+                border-radius: 12px;
+                font-size: 10px;
+                color: #fff;
+                background: #00a0dc;
+            }
+            .cartControl-wrapper {
+                position: absolute;
+                right: 14px;
+                bottom: 14px;
             }
         }
     }
-    
-    .centre {
-        padding: 0 18px;
+    .info {
+        padding: 18px;
+        >h1 {
+            line-height: 14px;
+            margin-bottom: 6px;
+            font-size: 14px;
+            color: #07111b;
+        }
+        p {
+            font-size: 12px;
+            line-height: 24px;
+            padding: 0 8px;
+            color: #4d555d;
+        }
+    }
+    .food-rating {
+        padding: 18px 18px 0 18px;
     }
     .bottom {
         padding: 0 18px;
-        
         .bottom-content {
             border-top: 1px solid rgba(1, 17, 27, 0.1);
         }
@@ -95,7 +120,6 @@
             }
             .item-right {
                 position: relative;
-                
                 flex: 1;
                 .name {
                     margin-bottom: 4px;
@@ -144,16 +168,15 @@
                         margin: 0 8px 4px 0;
                         font-size: 9px;
                     }
-                    
                 }
                 .time {
-                        position: absolute;
-                        top: 0;
-                        right: 0;
-                        line-height: 12px;
-                        font-size: 10px;
-                        color: #93999f;
-                    }
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    line-height: 12px;
+                    font-size: 10px;
+                    color: #93999f;
+                }
             }
         }
     }
