--- a/src/index.less
+++ b/src/index.less
@@ -11,3 +11,9 @@
     width: 100%;
     overflow: hidden;
 }
+.split {
+        width: 100%;
+        height: 16px;
+        border-top: 1px solid rgba(1, 17, 27, 0.1);
+        background: #f3f5f7;
+    }
